corrected alignments

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -40,6 +40,12 @@ h {
     line-height: 2 !important;
 }
 @media(max-width:576px){
+    .card-body-heading {
+            line-height: 2 !important;
+            font-size: 20px !important;
+        }
+}
+@media(max-width:576px){
     .contact-details-container {
             width: 95vw !important;
         }
